Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Programmermagazine : homepage" />
+    <meta name="description" content="程式人雜誌 : 首頁" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Programmermagazine</title>
+    <title>程式人雜誌</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/programmermagazine/programmermagazine">View on GitHub</a>
 
-          <h1 id="project_title">Programmermagazine</h1>
-          <h2 id="project_tagline">homepage</h2>
+          <h1 id="project_title">程式人雜誌</h1>
+          <h2 id="project_tagline">首頁</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/programmermagazine/programmermagazine/zipball/master">Download this project as a .zip file</a>
@@ -31,39 +31,30 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>關於程式人雜誌</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>程式人雜誌是一個結合「開放原始碼與公益捐款活動」的雜誌，簡稱「開放公益雜誌」。開放公益雜誌本著「讀書做善事、寫書做公益」的精神，我們非常歡迎程式人認養專欄、或者捐出您的網誌。</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>$ git clone https://github.com/programmermagazine/programmermagazine.git
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>雜誌下載</h3>
 
-<h3>Designer Templates</h3>
+<ol>
+<li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt</a></li>
+<li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf</a></li>
+</ol><h3>Support or Contact</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>本雜誌編輯為「陳鍾誠 (<a href="https://github.com/ccckmit" class="user-mention">@ccckmit</a>)」，歡迎程式人投稿，或者加入我們的社團。如果您願意成為本雜誌的專欄作家，請加入我們的 facebook 社團： <a href="https://www.facebook.com/groups/programmerMagazine/">https://www.facebook.com/groups/programmerMagazine/</a> 一同共襄盛舉。</p>
 
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>若要聯絡編輯，請寄信到 <a href="mailto:ccckmit@gmail.com">ccckmit@gmail.com</a>，也歡迎到編輯的網站 <a href="http://ccckmit.wikidot.com/">http://ccckmit.wikidot.com/</a> 瀏覽編輯的網站。</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Programmermagazine maintained by <a href="https://github.com/programmermagazine">programmermagazine</a></p>
+        <p class="copyright">程式人雜誌 maintained by <a href="https://github.com/programmermagazine">programmermagazine</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
