Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <ol>
 <li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt</a></li>
 <li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf</a></li>
-</ol><h3>Support or Contact</h3>
+</ol><h3>連絡我們</h3>
 
 <p>本雜誌編輯為「陳鍾誠 (<a href="https://github.com/ccckmit" class="user-mention">@ccckmit</a>)」，歡迎程式人投稿，或者加入我們的社團。如果您願意成為本雜誌的專欄作家，請加入我們的 facebook 社團： <a href="https://www.facebook.com/groups/programmerMagazine/">https://www.facebook.com/groups/programmerMagazine/</a> 一同共襄盛舉。</p>
 
