--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="程式人雜誌 : 首頁" />
+    <meta name="description" content="程式人雜誌 : 開放公益出版品" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/programmermagazine/programmermagazine">View on GitHub</a>
 
           <h1 id="project_title">程式人雜誌</h1>
-          <h2 id="project_tagline">首頁</h2>
+          <h2 id="project_tagline">開放公益出版品</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/programmermagazine/programmermagazine/zipball/master">Download this project as a .zip file</a>
@@ -35,19 +35,39 @@
 
 <p>程式人雜誌是一個結合「開放原始碼與公益捐款活動」的雜誌，簡稱「開放公益雜誌」。開放公益雜誌本著「讀書做善事、寫書做公益」的精神，我們非常歡迎程式人認養專欄、或者捐出您的網誌。</p>
 
-<pre><code>$ git clone https://github.com/programmermagazine/programmermagazine.git
-</code></pre>
-
 <h3>雜誌下載</h3>
 
-<ol>
-<li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt</a></li>
-<li><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf</a></li>
-</ol><h3>連絡我們</h3>
+<p></p>
 
-<p>本雜誌編輯為「陳鍾誠 (<a href="https://github.com/ccckmit" class="user-mention">@ccckmit</a>)」，歡迎程式人投稿，或者加入我們的社團。如果您願意成為本雜誌的專欄作家，請加入我們的 facebook 社團： <a href="https://www.facebook.com/groups/programmerMagazine/">https://www.facebook.com/groups/programmerMagazine/</a> 一同共襄盛舉。</p>
+<table width="95%">
+<tr>
+<th>雜誌下載</th>
+<th>ODT 檔</th>
+<th>A5:PDF 檔</th>
+<th>A4:PDF 檔</th>
+<th>Github專案</th>
+</tr>
+<tr>
+<td>2013年1月 (創刊號)</td>
+<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">A5.odt</a></td>
+<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">A5.pdf</a></td>
+<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A4.pdf">A4.pdf</a></td>
+<td><a href="https://github.com/programmermagazine/programmermagazine201301">Git</a></td>
+</tr>
+</table><p></p>
 
-<p>若要聯絡編輯，請寄信到 <a href="mailto:ccckmit@gmail.com">ccckmit@gmail.com</a>，也歡迎到編輯的網站 <a href="http://ccckmit.wikidot.com/">http://ccckmit.wikidot.com/</a> 瀏覽編輯的網站。</p>
+<h3>資源下載</h3>
+
+<p>要下載程式人雜誌每一期的資源，請使用 git 命令下載，例如若您要下載 2013 年 1 月的資源，請使用</p>
+
+<pre><code>$ git clone https://github.com/programmermagazine/programmermagazine201301.git
+</code></pre>
+
+<h3>連絡我們</h3>
+
+<p>竭誠歡迎程式人投稿，或者成為本雜誌的專欄作家，現在就可以加入 <a href="https://www.facebook.com/groups/programmerMagazine/">程式人雜誌社團</a> 一同共襄盛舉。</p>
+
+<p>本雜誌編輯為「陳鍾誠 (<a href="https://github.com/ccckmit" class="user-mention">@ccckmit</a>)」，若要聯絡編輯，請寄信到 <a href="mailto:ccckmit@gmail.com">ccckmit@gmail.com</a>。</p>
       </section>
     </div>
 
