Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 <th>ODT 檔</th>
 <th>A5:PDF 檔</th>
 <th>A4:PDF 檔</th>
-<th>Github專案</th>
+<th>程式壓縮檔</th>
 </tr>
 <tr>
 <td>2013年1月 (創刊號)</td>
 <td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">A5.odt</a></td>
 <td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">A5.pdf</a></td>
 <td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A4.pdf">A4.pdf</a></td>
-<td><a href="https://github.com/programmermagazine/programmermagazine201301">Git</a></td>
+<td><a href="https://github.com/programmermagazine/programmermagazine201301/archive/master.zip">Zip</a></td>
 </tr>
 </table><p></p>
 
