--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 </tr>
 <tr>
 <td>2013年1月 (創刊號)</td>
-<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.odt">A5.odt</a></td>
-<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A5.pdf">A5.pdf</a></td>
-<td><a href="https://dl.dropbox.com/u/101584453/ProgrammerMag/ProgrammerMag201301A4.pdf">A4.pdf</a></td>
+<td><a href="https://github.com/programmermagazine/201301/blob/master/ProgrammerMag201301A5.odt?raw=true">A5.odt</a></td>
+<td><a href="https://github.com/programmermagazine/201301/blob/master/ProgrammerMag201301A5.pdf?raw=true">A5.pdf</a></td>
+<td><a href="https://github.com/programmermagazine/201301/blob/master/ProgrammerMag201301A4.pdf?raw=true">A4.pdf</a></td>
 <td><a href="https://github.com/programmermagazine/programmermagazine201301/archive/master.zip">Zip</a></td>
 </tr>
 </table><p></p>
