--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 <h3>資源下載</h3>
 
-<p>要下載程式人雜誌每一期的資源，請使用 git 命令下載，例如若您要下載 2013 年 1 月的資源，請使用</p>
+<p>如果您想用 git 下載程式人雜誌每一期的資源，請使用 git clone 指令，例如若您要下載 2013 年 1 月的資源，請使用</p>
 
-<pre><code>$ git clone https://github.com/programmermagazine/programmermagazine201301.git
+<pre><code>$ git clone https://github.com/programmermagazine/201301.git
 </code></pre>
 
 <h3>連絡我們</h3>
